[gd_scene load_steps=21 format=3 uid="uid://coxtet87osx5h"]

[ext_resource type="Script" path="res://pq/Scripts/hud.gd" id="1_1ka5f"]
[ext_resource type="Script" path="res://pq/Scripts/dictonaryLogic.gd" id="2_eveou"]
[ext_resource type="Theme" uid="uid://8k5cu77fnhnr" path="res://pq/HUD/flask_buttons.tres" id="3_lodc6"]
[ext_resource type="Texture2D" uid="uid://dn07w2hysgkgn" path="res://pq/Assets/Flask.png" id="4_xrnw3"]
[ext_resource type="Texture2D" uid="uid://b6jjqnwxrx6qy" path="res://pq/Assets/Heart.png" id="5_6ylvo"]
[ext_resource type="FontFile" uid="uid://bk25r7mds5sn7" path="res://pq/HUD/Sprites/Xolonium-Regular.ttf" id="6_6ur2x"]
[ext_resource type="Texture2D" uid="uid://becmf37mbsf0r" path="res://pq/HUD/pause.png" id="7_j1m16"]
[ext_resource type="Texture2D" uid="uid://bgja3be5r4ia3" path="res://pq/HUD/play-button-arrowhead.png" id="8_nt88m"]
[ext_resource type="Texture2D" uid="uid://vltlhj1ralop" path="res://pq/Assets/Solubility Chart.png" id="9_fq6th"]
[ext_resource type="Texture2D" uid="uid://brwoeqh8gn451" path="res://pq/HUD/definition.png" id="9_rod4o"]
[ext_resource type="Texture2D" uid="uid://do2dkmsfv4016" path="res://pq/HUD/research.png" id="10_3m5j5"]
[ext_resource type="Texture2D" uid="uid://d2kicc5tdrjdi" path="res://pq/Assets/Chart Key.png" id="10_rubwi"]
[ext_resource type="Texture2D" uid="uid://v2cf311wr38l" path="res://pq/Assets/Progress Bar.png" id="11_2v3lc"]
[ext_resource type="Script" path="res://pq/Scripts/TextboxScript.gd" id="13_iod6u"]
[ext_resource type="Texture2D" uid="uid://bn4ser8ntbvaw" path="res://pq/Assets/Exit Button.png" id="14_12ov3"]
[ext_resource type="Theme" uid="uid://binb8tymyiycd" path="res://pq/Menu/mainMenu-button.tres" id="15_fr16m"]
[ext_resource type="AudioStream" uid="uid://bale0cpob6enl" path="res://pq/Assets/Audio/Reward.mp3" id="16_m06uk"]
[ext_resource type="AudioStream" uid="uid://v7rnbj67dmp5" path="res://pq/Assets/Audio/wrong.mp3" id="17_wlhxi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ibdl1"]
bg_color = Color(0.00800417, 0.00538258, 0.00125689, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.988235, 0.988235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vc5tt"]
bg_color = Color(0.0666667, 0.439216, 0.372549, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_1ka5f")
metadata/_edit_horizontal_guides_ = [-1.0]

[node name="Timer" type="Timer" parent="."]

[node name="ScienceScript" type="Node" parent="."]
script = ExtResource("2_eveou")

[node name="Flasks" type="Sprite2D" parent="."]

[node name="FlaskHolder" type="GridContainer" parent="Flasks"]
texture_filter = 1
offset_left = 829.0
offset_top = 160.0
offset_right = 1133.0
offset_bottom = 495.0
theme_override_constants/v_separation = 14

[node name="Option1" type="Button" parent="Flasks/FlaskHolder"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_lodc6")
theme_override_fonts/font = ExtResource("6_6ur2x")
theme_override_font_sizes/font_size = 40
text = "H20"
icon = ExtResource("4_xrnw3")
icon_alignment = 2
expand_icon = true

[node name="Option2" type="Button" parent="Flasks/FlaskHolder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_lodc6")
theme_override_fonts/font = ExtResource("6_6ur2x")
theme_override_font_sizes/font_size = 40
text = "H20"
icon = ExtResource("4_xrnw3")
icon_alignment = 2
expand_icon = true

[node name="Option3" type="Button" parent="Flasks/FlaskHolder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_lodc6")
theme_override_fonts/font = ExtResource("6_6ur2x")
theme_override_font_sizes/font_size = 40
text = "H20"
icon = ExtResource("4_xrnw3")
icon_alignment = 2
expand_icon = true

[node name="level1options" type="GridContainer" parent="Flasks"]
offset_left = 535.0
offset_top = 130.0
offset_right = 1133.0
offset_bottom = 467.0
size_flags_horizontal = 4

[node name="loption1" type="Button" parent="Flasks/level1options"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_lodc6")
theme_override_fonts/font = ExtResource("6_6ur2x")
theme_override_font_sizes/font_size = 20
text = "H20"
icon = ExtResource("4_xrnw3")
autowrap_mode = 3
icon_alignment = 2
expand_icon = true

[node name="loption2" type="Button" parent="Flasks/level1options"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_lodc6")
theme_override_fonts/font = ExtResource("6_6ur2x")
theme_override_font_sizes/font_size = 20
text = "H20"
icon = ExtResource("4_xrnw3")
autowrap_mode = 3
icon_alignment = 2
expand_icon = true

[node name="loption3" type="Button" parent="Flasks/level1options"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_lodc6")
theme_override_fonts/font = ExtResource("6_6ur2x")
theme_override_font_sizes/font_size = 20
text = "H20"
icon = ExtResource("4_xrnw3")
autowrap_mode = 3
icon_alignment = 2
expand_icon = true

[node name="Health" type="CanvasLayer" parent="."]

[node name="Heart" type="Sprite2D" parent="Health"]
position = Vector2(91.88, 165.77)
scale = Vector2(5, 5.11)
texture = ExtResource("5_6ylvo")

[node name="Heart2" type="Sprite2D" parent="Health"]
position = Vector2(191.88, 165.77)
scale = Vector2(5, 5.11)
texture = ExtResource("5_6ylvo")

[node name="Heart3" type="Sprite2D" parent="Health"]
position = Vector2(291.88, 165.77)
scale = Vector2(5, 5.11)
texture = ExtResource("5_6ylvo")

[node name="PauseButton" type="TextureButton" parent="."]
offset_left = 1038.0
offset_top = 1.0
offset_right = 1151.0
offset_bottom = 126.0
toggle_mode = true
texture_normal = ExtResource("7_j1m16")
texture_pressed = ExtResource("8_nt88m")
stretch_mode = 0

[node name="HelpButton" type="TextureButton" parent="."]
offset_left = 934.0
offset_top = 1.0
offset_right = 1047.0
offset_bottom = 126.0
toggle_mode = true
texture_normal = ExtResource("9_rod4o")
texture_pressed = ExtResource("8_nt88m")
stretch_mode = 0

[node name="chart" type="TextureButton" parent="HelpButton"]
visible = false
layout_mode = 0
offset_left = -124.0
offset_top = 3.0
offset_right = 4.0
offset_bottom = 131.0
toggle_mode = true
texture_normal = ExtResource("10_3m5j5")

[node name="SolubilityChart" type="Sprite2D" parent="HelpButton/chart"]
visible = false
position = Vector2(-404, 240)
scale = Vector2(0.552, 0.552)
texture = ExtResource("9_fq6th")

[node name="SolubilityKey" type="Sprite2D" parent="HelpButton/chart"]
visible = false
position = Vector2(-697, 561)
scale = Vector2(0.048, 0.048)
texture = ExtResource("10_rubwi")

[node name="ProgressBar" type="Sprite2D" parent="."]
visible = false
position = Vector2(421, 59)
scale = Vector2(16, 8)
texture = ExtResource("11_2v3lc")
hframes = 3
vframes = 15

[node name="Puddle" type="Label" parent="."]
offset_left = 318.0
offset_top = 500.0
offset_right = 459.0
offset_bottom = 548.0
theme_override_fonts/font = ExtResource("6_6ur2x")
theme_override_font_sizes/font_size = 25
text = "Puddle"

[node name="Questions" type="Label" parent="."]
offset_left = 154.0
offset_top = 494.0
offset_right = 989.0
offset_bottom = 553.0
theme_override_fonts/font = ExtResource("6_6ur2x")
theme_override_font_sizes/font_size = 21
text = "Question"

[node name="Textbox" type="CanvasLayer" parent="."]
visible = false

[node name="TextboxContainer" type="MarginContainer" parent="Textbox"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 531.0
offset_top = -65.0
offset_right = -28.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = -80
theme_override_constants/margin_right = -16
theme_override_constants/margin_bottom = -16

[node name="Panel" type="Panel" parent="Textbox/TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ibdl1")

[node name="MarginContainer" type="MarginContainer" parent="Textbox/TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="Textbox/TextboxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vc5tt")

[node name="HBoxContainer" type="HBoxContainer" parent="Textbox/TextboxContainer/MarginContainer"]
layout_mode = 2

[node name="Start" type="Label" parent="Textbox/TextboxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "*"

[node name="Label" type="Label" parent="Textbox/TextboxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "The placeholder text looks like this and it will cover and autowrap the container"
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="End" type="Label" parent="Textbox/TextboxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "v"

[node name="TextboxScript" type="Node" parent="Textbox"]
script = ExtResource("13_iod6u")

[node name="ExitButton" type="TextureButton" parent="."]
visible = false
offset_left = 20.0
offset_top = 13.0
offset_right = 281.0
offset_bottom = 129.0
texture_normal = ExtResource("14_12ov3")
stretch_mode = 0

[node name="Retry" type="Label" parent="."]
visible = false
offset_left = 206.0
offset_top = 213.0
offset_right = 988.0
offset_bottom = 296.0
theme = ExtResource("15_fr16m")
text = "Sorry.. Try again next time!"

[node name="PointsLabel" type="Label" parent="."]
offset_left = 8.0
offset_top = 64.0
offset_right = 129.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 22
text = "Points : 0 "
horizontal_alignment = 1
vertical_alignment = 1

[node name="wrong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_wlhxi")

[node name="correct" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_m06uk")

[node name="QNo" type="Label" parent="."]
offset_left = 20.0
offset_top = 17.0
offset_right = 110.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 22
text = "QNo : 1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Flasks/FlaskHolder/Option1" to="." method="_on_chem_button_pressed" binds= [0]]
[connection signal="pressed" from="Flasks/FlaskHolder/Option2" to="." method="_on_chem_button_pressed" binds= [1]]
[connection signal="pressed" from="Flasks/FlaskHolder/Option3" to="." method="_on_chem_button_pressed" binds= [2]]
[connection signal="pressed" from="Flasks/level1options/loption1" to="." method="_on_chem_button_pressed" binds= [0]]
[connection signal="pressed" from="Flasks/level1options/loption2" to="." method="_on_chem_button_pressed" binds= [0]]
[connection signal="pressed" from="Flasks/level1options/loption3" to="." method="_on_chem_button_pressed" binds= [0]]
[connection signal="toggled" from="PauseButton" to="." method="_on_pause_button_toggled"]
[connection signal="toggled" from="HelpButton" to="." method="_on_help_button_toggled"]
[connection signal="toggled" from="HelpButton/chart" to="." method="_on_chart_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
